Fixed professional projects display on small mobile screens

--- a/css/style.css
+++ b/css/style.css
@@ -87,8 +87,6 @@ section {
     max-width: 300px;
 }
 
-
-
 .image__border--dark {
     border: 0.25rem solid rgba(255, 255, 255, 0.2);
 }
@@ -170,6 +168,19 @@ section {
         font-weight: 500;
         font-style: italic;
     }
+
+    section {
+        padding-left: 24px;
+        padding-right: 24px;
+    }
+
+    .project__major__image {
+        max-width: 100%;
+    }
+
+    .project__minor__image {
+        max-width: 20%;
+    }
 }
 
 
@@ -177,7 +188,6 @@ section {
     body {
         font-size: 110%;
     }
-
 
     .content {
         padding: 2em 3em 0;
@@ -314,6 +324,10 @@ section {
 
 .box-shadow--small {
     box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+}
+
+.flex--row-reverse {
+    flex-direction: row-reverse
 }
 
 /* Override PureCSS styles */
